<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
    android:id="@+id/scenario_relative_layout"    
    >
    <ImageView
        android:id="@+id/scenario_imageview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/scenario_10"
        android:contentDescription="@string/scenario_imageview_desc" 
        />
     <ImageView
        android:id="@+id/pattern_left_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pattern_left"
        android:contentDescription="@string/pattern_left_imageview_desc" 
	    android:layout_marginLeft="200dp"
	    android:layout_marginTop="160dp"
        />    
    <ImageView
        android:id="@+id/pattern_right_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pattern_right"
        android:contentDescription="@string/pattern_right_imageview_desc" 
	    android:layout_marginRight="200dp"
	    android:layout_marginTop="60dp"
	    android:layout_alignParentRight="true"	    
        />            
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/fire_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/scenario_10_fire"
        android:contentDescription="@string/fire_imageview_desc" 
        android:visibility="invisible"
        />        
    <ImageView
        android:id="@+id/shoelace_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/scenario_10_shoelace"
        android:contentDescription="@string/shoelace_imageview_desc" 
        android:visibility="invisible"
        />                
    <ImageView
        android:id="@+id/bowl_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/scenario_10_bowl"
        android:contentDescription="@string/bowl_imageview_desc" 
        android:visibility="invisible"
        />                
   <ImageView
        android:id="@+id/can_1_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/scenario_10_can_1"
        android:contentDescription="@string/can_1_imageview_desc" 
        android:visibility="invisible"
        />                
   <ImageView
        android:id="@+id/can_2_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/scenario_10_can_2"
        android:contentDescription="@string/can_2_imageview_desc" 
        android:visibility="invisible"
        />                
   <ImageView
        android:id="@+id/can_3_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/scenario_10_can_3"
        android:contentDescription="@string/can_3_imageview_desc" 
        android:visibility="invisible"
        />                            
    <ImageView
        android:id="@+id/dirty_water_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/scenario_10_dirty_water"
        android:contentDescription="@string/dirty_water_imageview_desc" 
        android:visibility="invisible"
        />        
    <ImageView
        android:id="@+id/sock_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/scenario_10_sock"
        android:contentDescription="@string/sock_imageview_desc" 
        android:visibility="invisible"
        />        
    <ImageView
        android:id="@+id/water_bowl_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/scenario_10_water_bowl"
        android:contentDescription="@string/water_bowl_imageview_desc" 
        android:visibility="invisible"
        />            
    </FrameLayout>
    <Button
        android:id="@+id/hint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/hint_button"
    />        
    <Button
        android:id="@+id/navi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/navi_button"/>        			    
</RelativeLayout>