<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
    >
    <ImageView android:id="@+id/scenario_imageview"
      android:layout_width="fill_parent"  
      android:layout_height="fill_parent"  
	  android:background="@drawable/scenario_8"    
	  android:contentDescription="@string/scenario_imageview_desc"
	/>    
	<ImageView
	    android:id="@+id/mom_imageview"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="116dp"
	    android:layout_marginTop="132dp"
	    android:background="@drawable/mom"
	    android:contentDescription="@string/mom_imageview_desc" />
	<ImageView
	    android:id="@+id/baby_imageview"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="172dp"
	    android:layout_marginTop="216dp"
	    android:background="@drawable/baby"
	    android:contentDescription="@string/baby_imageview_desc" />			    
	<ImageView
	    android:id="@+id/you_imageview"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="248dp"
	    android:layout_marginTop="180dp"
	    android:background="@drawable/you"
	    android:contentDescription="@string/you_imageview_desc" />	
    <ImageView
	    android:id="@+id/scenario_text_imageview"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_alignBottom="@+id/scenario_imageview"
	    android:background="@drawable/scenario_8_text"
	    android:contentDescription="@string/scenario_text_imageview_desc" />
    <Button
        android:id="@+id/hint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/hint_button"/>        
    <Button
        android:id="@+id/navi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/navi_button"/>        			    
</RelativeLayout>