<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
    >
    <ImageView android:id="@+id/scenario_imageview"
      android:layout_width="fill_parent"  
      android:layout_height="fill_parent"  
	  android:background="@drawable/scenario_6"    
	  android:contentDescription="@string/scenario_imageview_desc"
	/>    
	<ImageView android:id="@+id/tarp_imageview"
      android:layout_width="wrap_content"  
      android:layout_height="wrap_content"  
	  android:background="@drawable/tarp"    
	  android:contentDescription="@string/tarp_imageview_desc"
	  android:visibility="invisible"
	/>
	<ImageView
	    android:id="@+id/tarp_overhead_imageview"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="150dp"
	    android:layout_marginTop="60dp"	    
	    android:background="@drawable/tarp_overhead"
	    android:contentDescription="@string/tarp_overhead_imageview_desc"
	    android:visibility="invisible" />
	<Button
        android:id="@+id/hint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/hint_button"
    />                		
    <Button
        android:id="@+id/navi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/navi_button"/>        				
</RelativeLayout>
